--- a/OceanMuseum/package.json
+++ b/OceanMuseum/package.json
@@ -14,7 +14,9 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "chart.js": "^4.4.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue-toast-notification": "^3.1.3",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
